[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "aptos-sdk>=0.10.0",
    "mcp>=1.6.0",
    "openai>=1.72.0",
    "openai-agents>=0.0.9",
    "pendulum>=3.1.0",
    "python-dotenv>=1.1.0",
]
